chore: 폴더 구조 변경

--- a/app/src/main/res/layout/activity_dept_info.xml
+++ b/app/src/main/res/layout/activity_dept_info.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.knowway.activity.DeptInfoActivity">
+    tools:context="com.knowway.ui.activity.DeptInfoActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
