--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.knowway.activity.ChatActivity">
+    tools:context="com.knowway.ui.activity.ChatActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
