--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.knowway.activity.MypageActivity">
+    tools:context="com.knowway.ui.activity.MypageActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
