--- a/app/src/main/res/layout/activity_department_store_search.xml
+++ b/app/src/main/res/layout/activity_department_store_search.xml
@@ -89,5 +89,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/blue_btn" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="다음"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/next_btn"
+        app:layout_constraintEnd_toEndOf="@+id/next_btn"
+        app:layout_constraintStart_toStartOf="@+id/next_btn"
+        app:layout_constraintTop_toTopOf="@+id/next_btn" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
