--- a/app/src/main/res/layout/fragment_mypage_footer.xml
+++ b/app/src/main/res/layout/fragment_mypage_footer.xml
@@ -19,13 +19,13 @@
         android:focusable="true"/>
 
     <ImageView
-        android:id="@+id/ic_footer_mypage"
+        android:id="@+id/ic_footer_chat"
         android:layout_width="34dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="15dp"
-        android:src="@drawable/ic_footer_mypage"
+        android:src="@drawable/ic_footer_chat"
         android:clickable="true"
         android:focusable="true"/>
 </RelativeLayout>
