--- a/app/src/main/res/layout/fragment_floor.xml
+++ b/app/src/main/res/layout/fragment_floor.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerInParent="true">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageButton
-        android:id="@+id/confirmButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/blue_btn"
-        android:padding="10dp"
-        android:contentDescription="@string/confirm" />
+        android:id="@+id/floor_box"
+        android:layout_width="38dp"
+        android:layout_height="34dp"
+        android:background="@drawable/floor"
+        />
 
     <TextView
-        android:id="@+id/confirmText"
+        android:id="@+id/floor_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="@string/confirm"
+        android:text="1층"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:translationX="-1dp"
