--- a/app/src/main/res/drawable/rounded_top_border.xml
+++ b/app/src/main/res/drawable/rounded_top_border.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#000000"/> <!-- 배경 색상 -->
+            <corners android:topLeftRadius="16dp" android:topRightRadius="16dp"/> <!-- 상단 모서리 반경 -->
+        </shape>
+    </item>
+    <item
+        android:left="0dp"
+        android:right="0dp"
+        android:top="3dp"
+        android:bottom="0dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#FFFFFF"/> <!-- 테두리 색상 -->
+            <corners android:topLeftRadius="20dp" android:topRightRadius="20dp"/> <!-- 상단 모서리 반경 -->
+        </shape>
+    </item>
+</layer-list>
