--- a/app/src/main/res/layout/fragment_floor_select.xml
+++ b/app/src/main/res/layout/fragment_floor_select.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TableLayout
         android:layout_width="286dp"
-        android:layout_height="300dp"
+        android:layout_height="320dp"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:text="층 선택"
                 android:textColor="@color/black"
-                android:textSize="38dp"
+                android:textSize="22dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
@@ -38,26 +38,68 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp">
 
-            <ImageView
-                android:id="@+id/imageView1"
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="34dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/floor" />
+                >
+                <ImageView
+                    android:id="@+id/floorB1"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    app:srcCompat="@drawable/floor" />
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="0dp"
-                android:layout_height="34dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/floor" />
+                <TextView
+                    android:id="@+id/textB1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="B1"
+                    android:textColor="@color/black" />
+            </FrameLayout>
 
-            <ImageView
-                android:id="@+id/imageView3"
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="34dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/floor" />
+                >
+
+                <ImageView
+                    android:id="@+id/floorB2"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    app:srcCompat="@drawable/floor" />
+
+                <TextView
+                    android:id="@+id/textB2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="B2"
+                    android:textColor="@color/black" />
+
+            </FrameLayout>
+
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
+                <ImageView
+                    android:id="@+id/floorB3"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    app:srcCompat="@drawable/floor" />
+
+                <TextView
+                    android:id="@+id/textB3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="B3"
+                    android:textColor="@color/black" />
+            </FrameLayout>
         </TableRow>
 
         <TableRow
@@ -65,26 +107,65 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp">
 
-            <ImageView
-                android:id="@+id/imageView4"
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="34dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/floor" />
+                >
+                <ImageView
+                    android:id="@+id/floor1"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    app:srcCompat="@drawable/floor" />
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="0dp"
-                android:layout_height="34dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/floor" />
+                <TextView
+                    android:id="@+id/text1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="1"
+                    android:textColor="@color/black" />
+            </FrameLayout>
 
-            <ImageView
-                android:id="@+id/imageView6"
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="34dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/floor" />
+                >
+                <ImageView
+                    android:id="@+id/floor2"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    app:srcCompat="@drawable/floor" />
+
+                <TextView
+                    android:id="@+id/text2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="2"
+                    android:textColor="@color/black" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
+                <ImageView
+                    android:id="@+id/floor3"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    app:srcCompat="@drawable/floor" />
+
+                <TextView
+                    android:id="@+id/text3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="3"
+                    android:textColor="@color/black" />
+            </FrameLayout>
         </TableRow>
 
         <TableRow
@@ -92,26 +173,66 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp">
 
-            <ImageView
-                android:id="@+id/imageView7"
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="34dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/floor" />
+                >
+                <ImageView
+                    android:id="@+id/floor4"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    app:srcCompat="@drawable/floor" />
 
-            <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="0dp"
-                android:layout_height="34dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/floor" />
+                <TextView
+                    android:id="@+id/text4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="4"
+                    android:textColor="@color/black" />
+            </FrameLayout>
 
-            <ImageView
-                android:id="@+id/imageView9"
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="34dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/floor" />
+                >
+                <ImageView
+                    android:id="@+id/floor5"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    app:srcCompat="@drawable/floor" />
+
+                <TextView
+                    android:id="@+id/text5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="5"
+                    android:textColor="@color/black" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
+                <ImageView
+                    android:id="@+id/floor6"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/floor" />
+
+                <TextView
+                    android:id="@+id/text6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="6"
+                    android:textColor="@color/black" />
+            </FrameLayout>
         </TableRow>
 
         <TableRow
@@ -119,12 +240,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp">
 
-            <ImageView
-                android:id="@+id/imageView10"
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="34dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/floor" />
+                >
+                <ImageView
+                    android:id="@+id/floor7"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/floor" />
+
+                <TextView
+                    android:id="@+id/text7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="7"
+                    android:textColor="@color/black" />
+            </FrameLayout>
         </TableRow>
 
         <TableRow
