--- a/app/src/main/res/layout/fragment_main_person.xml
+++ b/app/src/main/res/layout/fragment_main_person.xml
@@ -16,15 +16,19 @@
         app:layout_constraintStart_toStartOf="@+id/main_walking_person"
         app:layout_constraintTop_toTopOf="@+id/main_walking_person" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/main_question"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
         android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/main_walking_person"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.369" />
 
     <ImageView
         android:id="@+id/main_walking_person"
@@ -32,9 +36,9 @@
         android:layout_height="221dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_question"
-        app:layout_constraintVertical_bias="0.36" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.79" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
