feat: 관리자 백화점 지점 검색 기능 추가

--- a/app/src/main/res/layout/item_admin_department.xml
+++ b/app/src/main/res/layout/item_admin_department.xml
@@ -8,8 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="12dp"
-        android:layout_marginTop="24dp"
+        android:paddingTop="22dp"
+        android:paddingBottom="22dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:gravity="center_vertical">
 
         <LinearLayout
