--- a/app/src/main/res/layout/activity_admin_department_store_search.xml
+++ b/app/src/main/res/layout/activity_admin_department_store_search.xml
@@ -23,7 +23,7 @@
         android:id="@+id/inputLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="36dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,10 +31,12 @@
 
         <EditText
             android:id="@+id/inputEditText"
-            android:layout_width="200dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:hint="@string/dept_placeholder"
             android:background="@android:color/transparent"
+            android:textColor="@color/black"
+            android:textColorHint="@color/dark_grey"
             android:padding="10dp"
             android:singleLine="true"
             android:ellipsize="end"
@@ -45,7 +47,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/ic_search"/>
+            android:src="@drawable/ic_search"
+            android:clickable="true"
+            android:focusable="true"/>
     </LinearLayout>
 
     <View
@@ -62,8 +66,8 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginBottom="48dp"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
         app:layout_constraintTop_toBottomOf="@id/separatorLine"
@@ -77,12 +81,27 @@
             android:layout_height="match_parent"/>
     </FrameLayout>
 
+    <TextView
+        android:id="@+id/errorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="백화점 지점을 선택해주세요."
+        android:textColor="@color/red"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/confirmButtonContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+
     <include
         android:id="@+id/confirmButtonContainer"
         layout="@layout/custom_confirm_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
+        android:clickable="true"
+        android:enabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
