--- a/app/src/main/res/layout/fragment_selected_tips.xml
+++ b/app/src/main/res/layout/fragment_selected_tips.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.SelectedTipsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="선정된 팁 프레그먼트!" />
 
 </FrameLayout>
