--- a/app/src/main/res/layout/activity_admin_recording_list.xml
+++ b/app/src/main/res/layout/activity_admin_recording_list.xml
@@ -36,7 +36,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/divider"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/white"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
