--- a/app/src/main/res/layout/fragment_record_modal.xml
+++ b/app/src/main/res/layout/fragment_record_modal.xml
@@ -116,27 +116,22 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.573" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@drawable/dash_line"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recordingWave" />
-
-        <TextView
-            android:id="@+id/title_text"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/titleText"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="타이틀을 입력해주세요."
+            android:hint="타이틀을 입력해주세요."
+            android:textColor="@color/black"
             android:textSize="17dp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/startButtonInclude"
+            android:maxLength="10"
+            android:background="@null"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.384"
+            app:layout_constraintHorizontal_bias="0.307"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageView11"
-            app:layout_constraintVertical_bias="0.966" />
+            app:layout_constraintVertical_bias="0.813" />
 
         <include
             android:id="@+id/confirmButtonInclude"
