--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/signup_header"
+        android:src="@drawable/login_header"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +24,7 @@
         android:layout_marginTop="52dp"
         android:gravity="center"
         android:text="KNOW WAY"
-        android:textColor="@color/light_blue"
+        android:textColor="@color/medium_blue"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -68,7 +68,7 @@
         android:layout_width="60dp"
         android:layout_height="30dp"
         android:layout_marginTop="52dp"
-        android:background="@drawable/right_blue_btn"
+        android:background="@drawable/signup_btn"
         android:contentDescription="@string/confirm"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
