--- a/app/src/main/res/layout/fragment_main_map.xml
+++ b/app/src/main/res/layout/fragment_main_map.xml
@@ -14,6 +14,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:srcCompat="@drawable/map_1" />
+        app:layout_constraintHorizontal_bias="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
