style: signup page 수정

--- a/app/src/main/res/layout/fragment_select_footer.xml
+++ b/app/src/main/res/layout/fragment_select_footer.xml
@@ -13,8 +13,8 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="15dp"
-        android:src="@drawable/ic_footer_mypage"
         android:clickable="true"
-        android:focusable="true"/>
+        android:focusable="true"
+        android:src="@drawable/ic_footer_mypage" />
 
 </RelativeLayout>
