--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -8,7 +8,7 @@
     tools:context="com.knowway.ui.activity.OnboardingActivity">
 
     <TextView
-        android:id="@+id/know_way_service_name"
+        android:id="@+id/knowway_service_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -31,7 +31,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/know_way_service_name" />
+        app:layout_constraintTop_toBottomOf="@id/knowway_service_name" />
 
     <ImageView
         android:id="@+id/image_heart"
