--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/know_way_service_name"
+        android:id="@+id/signup_service_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
@@ -27,7 +27,6 @@
         android:textColor="@color/medium_blue"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/signup_header_image" />
 
@@ -42,111 +41,116 @@
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/know_way_service_name" />
+        app:layout_constraintTop_toBottomOf="@id/signup_service_name" />
 
     <EditText
         android:id="@+id/input_email"
-        android:layout_width="200dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="64dp"
         android:background="@drawable/edittext_bottom_dotted_line"
-        android:gravity="left"
-        android:hint="이메일 입력"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:hint="이메일"
+        android:padding="10dp"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
+        android:textAlignment="textStart"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:textSize="17sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColorHint="@color/dark_grey"
+        android:textSize="20sp"
+
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="@+id/input_password"
         app:layout_constraintTop_toBottomOf="@id/service_subtitle" />
 
     <ImageButton
         android:id="@+id/duplication_check_button"
         android:layout_width="60dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="52dp"
+        android:layout_height="0dp"
         android:background="@drawable/signup_btn"
         android:contentDescription="@string/confirm"
         android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="@id/input_email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.849"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/service_subtitle" />
+        app:layout_constraintHorizontal_bias="0.171"
+        app:layout_constraintStart_toEndOf="@id/input_email"
+        app:layout_constraintTop_toTopOf="@id/input_email"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/duplication_check_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_centerInParent="true"
         android:clickable="true"
         android:text="중복확인"
         android:textColor="@color/white"
         android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.824"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/service_subtitle" />
+        app:layout_constraintBottom_toBottomOf="@+id/duplication_check_button"
+        app:layout_constraintEnd_toEndOf="@+id/duplication_check_button"
+        app:layout_constraintStart_toStartOf="@+id/duplication_check_button"
+        app:layout_constraintTop_toTopOf="@+id/duplication_check_button" />
 
     <TextView
         android:id="@+id/email_validation_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="이메일이 유효합니다."
         android:textColor="@color/green"
-    android:textSize="14sp"
-    android:visibility="gone"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/input_email" />
+        android:textSize="14sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/input_password"
+        app:layout_constraintStart_toStartOf="@+id/input_email"
+        app:layout_constraintTop_toBottomOf="@+id/input_email" />
 
     <TextView
         android:id="@+id/email_duplicate_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="이메일이 중복되었습니다."
         android:textColor="@color/red"
         android:textSize="14sp"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/input_email" />
+        app:layout_constraintBottom_toTopOf="@+id/input_password"
+        app:layout_constraintStart_toStartOf="@+id/input_email"
+        app:layout_constraintTop_toBottomOf="@+id/input_email" />
 
     <EditText
         android:id="@+id/input_password"
-        android:layout_width="200dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="60dp"
-        android:hint="패스워드 입력"
-        android:paddingLeft="17dp"
-        android:paddingRight="16dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:layout_marginTop="24dp"
         android:background="@drawable/edittext_bottom_dotted_line"
-        android:textSize="17sp"
+        android:hint="비밀번호"
+        android:padding="10dp"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
+        android:textAlignment="textStart"
+        android:textColor="@color/black"
+        android:textColorHint="@color/dark_grey"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/input_email" />
 
     <EditText
         android:id="@+id/input_password_confirm"
-        android:layout_width="200dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/edittext_bottom_dotted_line"
-        android:hint="패스워드 재입력"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:hint="비밀번호 재입력"
+        android:padding="10dp"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
+        android:textAlignment="textStart"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:textSize="17sp"
+        android:textColorHint="@color/dark_grey"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/input_password" />
 
@@ -154,14 +158,13 @@
         android:id="@+id/password_error_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="비밀번호는 8자 이상이어야 합니다."
         android:textColor="@color/red"
         android:textSize="14sp"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/input_password" />
+        app:layout_constraintBottom_toTopOf="@+id/input_password_confirm"
+        app:layout_constraintStart_toStartOf="@+id/input_password"
+        app:layout_constraintTop_toBottomOf="@+id/input_password" />
 
     <TextView
         android:id="@+id/password_mismatch_error"
@@ -172,20 +175,17 @@
         android:textColor="@color/red"
         android:textSize="14sp"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/input_password_confirm"
         app:layout_constraintTop_toBottomOf="@id/input_password_confirm" />
 
     <ImageButton
         android:id="@+id/sign_up_button"
-        android:layout_width="118dp"
-        android:layout_height="46dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:background="@drawable/blue_btn"
+        android:background="@drawable/login_btn"
         android:contentDescription="회원가입"
-        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/input_password_confirm" />
 
@@ -202,4 +202,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/input_password_confirm" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
