--- a/app/src/main/res/layout/fragment_map_footer.xml
+++ b/app/src/main/res/layout/fragment_map_footer.xml
@@ -3,7 +3,6 @@
     android:layout_height="wrap_content"
     android:background="@color/dark_blue"
     android:padding="10dp"
-    android:gravity="center_vertical"
     android:id="@+id/footer_layout">
 
     <ImageView
@@ -11,56 +10,60 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
         android:layout_marginStart="15dp"
-        android:layout_marginEnd="20dp"
+        android:layout_centerVertical="true"
         android:src="@drawable/ic_footer_chat"
         android:clickable="true"
         android:focusable="true"/>
-
-    <TextView
-        android:id="@+id/play_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="10dp"
-        android:layout_toEndOf="@id/ic_footer_chat"
-        android:text="@string/play"
-        android:textColor="@android:color/white"
-        android:textSize="20sp" />
-
-    <RelativeLayout
-        android:id="@+id/toggleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
-        android:layout_marginTop="8dp"
-        android:layout_toEndOf="@id/play_text"
-        android:background="@drawable/toggle_off_background"
-        android:clickable="true"
-        android:focusable="true">
-
-        <ImageView
-            android:id="@+id/toggleCircle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="7dp"
-            android:layout_marginTop="3.5dp"
-            android:background="@drawable/toggle_off_circle"
-            android:scaleType="centerInside" />
-    </RelativeLayout>
 
     <ImageView
         android:id="@+id/ic_footer_mypage"
         android:layout_width="34dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="55dp"
         android:layout_marginEnd="15dp"
-        android:layout_toEndOf="@+id/toggleButton"
+        android:layout_centerVertical="true"
         android:src="@drawable/ic_footer_mypage"
         android:clickable="true"
         android:focusable="true"/>
+
+    <LinearLayout
+        android:id="@+id/center_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/play_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/play"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="1dp"/>
+
+        <RelativeLayout
+            android:id="@+id/toggleButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/toggle_off_background"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/toggleCircle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="7dp"
+                android:layout_marginTop="3.5dp"
+                android:background="@drawable/toggle_off_circle"
+                android:scaleType="centerInside" />
+        </RelativeLayout>
+    </LinearLayout>
+
 </RelativeLayout>
