add: 메인 페이지에 녹음 패널 연결

--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -7,8 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.RecordActivity"
     android:gravity="bottom"
-    android:topLeftRadius="20dp"
-    android:topRightRadius="20dp"
     app:umanoDragView="@id/slide_layout"
     app:umanoOverlay="true"
     app:umanoPanelHeight="0dp">
@@ -16,8 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/back_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#42A5F5">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/recordingBtn"
