--- a/app/src/main/res/layout/dialog_delete_confirmation.xml
+++ b/app/src/main/res/layout/dialog_delete_confirmation.xml
@@ -21,9 +21,8 @@
         android:layout_width="73dp"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="46dp"
-        android:layout_marginBottom="40dp"
-        android:layout_toEndOf="@+id/button_cancel"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="28dp"
         android:background="@drawable/blue_btn"
 
         android:text="확인"
@@ -35,10 +34,12 @@
         android:layout_width="73dp"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="29dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="28dp"
+        android:layout_toEndOf="@+id/button_confirm"
         android:background="@drawable/red_btn"
         android:text="취소"
+
         android:textColor="#FFFFFF"
         android:textSize="16sp" />
 
