--- a/app/src/main/res/layout/fragment_mypage_footer.xml
+++ b/app/src/main/res/layout/fragment_mypage_footer.xml
@@ -1,10 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/footer_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/dark_blue"
     android:padding="10dp"
     android:gravity="center_vertical"
-    android:id="@+id/footer_layout">
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent">
 
     <ImageView
         android:id="@+id/ic_footer_map"
