fix: fix the password input type

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -123,6 +123,7 @@
         android:background="@drawable/edittext_bottom_dotted_line"
         android:hint="비밀번호"
         android:padding="10dp"
+        android:inputType="textPassword"
         android:scrollHorizontally="true"
         android:singleLine="true"
         android:textAlignment="textStart"
@@ -142,6 +143,7 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/edittext_bottom_dotted_line"
         android:hint="비밀번호 재입력"
+        android:inputType="textPassword"
         android:padding="10dp"
         android:scrollHorizontally="true"
         android:singleLine="true"
